--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "hello-world",
   "version": "0.0.0",
   "engines": {
-        "node": "9.4.0"
-    },
+    "node": "9.4.0"
+  },
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "nodemon": "^1.14.11",
