--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "0.0.28",
     "@angular/animations": "^5.0.0",
     "@angular/cli": "1.5.5",
     "@angular/common": "^5.0.0",
