--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^0.0.28",
     "@angular/animations": "^5.0.0",
     "@angular/cli": "1.5.5",
     "@angular/common": "^5.0.0",
@@ -32,6 +33,7 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
+    "@angular-devkit/core": "^0.0.28",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
