--- a/package.json
+++ b/package.json
@@ -27,16 +27,22 @@
     "@angular/router": "^5.1.0",
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
-    "typescript": "~2.5.3",
     "express": "^4.16.2",
     "http": "0.0.0",
+    "mongoose": "^4.13.9",
+    "multer": "^1.3.0",
+    "ng2-ckeditor": "^1.2.0",
+    "ng2-quill-editor": "^2.0.0",
+    "ngx-quill": "^2.1.2",
+    "ngx-quill-editor": "^2.2.2",
+    "nodemon": "^1.14.11",
     "path": "^0.12.7",
+    "quill": "^1.3.6",
     "rxjs": "^5.5.6",
+    "typescript": "~2.5.3",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.4",
-    "@angular/compiler-cli": "^5.1.0",
     "@angular/language-service": "^5.1.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
@@ -52,7 +58,6 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "tslint": "~5.9.1"
   }
 }
