--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,11 @@
 {
+  "include": [
+    "src/**/*",
+    "node_modules/ngx-quill-editor/index.ts",
+    "node_modules/ngx-quill-editor/quillEditor.component.ts",
+    "node_modules/ngx-quill-editor/quillEditor.module.ts"
+  ],
+
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
