--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "flicker": "^1.1.5",
     "http": "0.0.0",
     "mongoose": "^4.13.9",
     "multer": "^1.3.0",
