--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "flicker": "^1.1.5",
     "http": "0.0.0",
     "mongoose": "^4.13.9",
@@ -37,9 +40,13 @@
     "ngx-quill": "^2.1.2",
     "ngx-quill-editor": "^2.2.2",
     "nodemon": "^1.14.11",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "quill": "^1.3.6",
     "rxjs": "^5.5.6",
+    "save": "^2.3.2",
     "typescript": "~2.5.3",
     "zone.js": "^0.8.19"
   },
